# condor_metrics

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml
scripts/: entrypoint.sh  install_conda_and_htcondor.sh  setup_condor_config.py
src/: factory.py  main.py  metrics.py  routes.py
tests/: test_manual_test.py
